--- a/foundItems.html
+++ b/foundItems.html
@@ -1,6 +1,8 @@
-<ol>
-  <li ng-repeat="item in list.items">
-    {{item.name}}
-    <button ng-click="list.onRemove({index: $index});">Don't want this one!</button>
+<ul>
+  <li ng-repeat="item in menu.foundItems">
+    {{item.short_name}}
+    [{{item.name}}] -- {{item.description}}
+    <button ng-click="menu.onRemove({itemIndex: $index});">Don't want this one!</button>
   </li>
-</ol>
+</ul>
+<div class="error" ng-if="menu.errorMessage()">Nothing found</div>
