--- a/foundItems.html
+++ b/foundItems.html
@@ -1,7 +1,7 @@
 <ul>
-  <li ng-repeat="item in menu.foundItems">
-    {{item.short_name}}
-    [{{item.name}}] -- {{item.description}}
+  <li ng-repeat="item in menu.foundMenu">
+    {{item.name}}
+    ({{item.short_name}}) -- {{item.description}}
     <button ng-click="menu.onRemove({itemIndex: $index});">Don't want this one!</button>
   </li>
 </ul>
